2011-06-18  Yufeng Shen  <miletus@chromium.org>

        Reviewed by Darin Fisher.

        Adding "force" filed to Touch Event
        https://bugs.webkit.org/show_bug.cgi?id=62766

        * fast/events/touch/document-create-touch-expected.txt:
        * fast/events/touch/script-tests/document-create-touch.js:

2011-06-18  Alice Boxhall  <aboxhall@chromium.org>

        Reviewed by Chris Fleizach.

        Accessibility description for an element should make use of aria-labelledby.
        https://bugs.webkit.org/show_bug.cgi?id=61995

        * accessibility/aria-labelledby-on-input.html:
        * accessibility/aria-labelledby-overrides-aria-label-expected.txt: Added.
        * accessibility/aria-labelledby-overrides-aria-label.html: Added.
        * accessibility/aria-labelledby-overrides-label-expected.txt:
        * accessibility/aria-labelledby-overrides-label.html:
        * accessibility/aria-labelledby-stay-within.html:
        * platform/mac/accessibility/aria-labelledby-on-input-expected.txt:

2011-06-18  Adam Bergkvist  <adam.bergkvist@ericsson.com>

        Reviewed by Tony Gentilcore.

        Media Stream no-interface-object test should not have ReferenceError message in expected results
        https://bugs.webkit.org/show_bug.cgi?id=60391

        Fixed no-interface-object test to not include ReferenceError message in expected results

        * fast/dom/MediaStream/no-interface-object-expected.txt:
        * fast/dom/MediaStream/script-tests/no-interface-object.js:
        (shouldThrowReferenceError):
        (test):

2011-06-18  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Eric Seidel.

        Set text-align:-webkit-match-parent for li elements in the default style sheet.
        https://bugs.webkit.org/show_bug.cgi?id=57232

        * fast/css/list-item-text-align-expected.txt: Added.
        * fast/css/list-item-text-align.html: Added.

2011-06-18  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][Mac] Skip failing tests.
